--- a/index.html
+++ b/index.html
@@ -1,19 +1,61 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-  <title>2dgirlfiend | Home</title>
+  <title>2dgirlfriend | Home</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A list of Ant's 2d waifus">
   <meta name="keywords" content="anime, girlfriend">
   <meta name="author" content="Shaun C-B">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" href="styles.css">
   <!-- <link rel="shortcut icon" href="ui_images/websiteicon.ico"> -->
 </head>
 
 <body>
-  <h1>2dgirlfriend.xyz</h1>
-  <p>coming soon, under development</p>
+  <div id=title-box>
+    <h1>2dgirlfriend.xyz</h1>
+    <p>coming soon, under development</p>
+  </div>
+
+  <div id=content-box class=flex-container>
+    <div class=test-div>
+      <img src=content_images/nino.png class=box-image alt="Nino" title="Nino">
+    </div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+    <div class=test-div></div>
+  </div>
 </body>
 
 </html>
