Online JS test 2
- Renamed file online and link changed.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 
   <script src="image_list.js"></script>
-  <script src="https://www.dropbox.com/s/vkc7udr3f3vo1h8/image_list.js?dl=0"></script>
+  <script src="image_list2.js"></script>
+  <script src="https://www.dropbox.com/s/vkc7udr3f3vo1h8/image_list_online.js?dl=0"></script>
   <script>
   /* Goes through each item in the array and creates a div
   with the image and metadata. Each newly created item
