Online JS test 3
- Changed images in JSON arrays.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   /* Goes through each item in the array and creates a div
   with the image and metadata. Each newly created item
   is then added to the gallery. */
-    for(item of image_list) {
+    for(item of image_list2) {
       var div = document.createElement("div");
       div.setAttribute('class', 'test-div')
       var img = document.createElement("img");
