--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-  <title>2dgirlfriend | Home</title>
+  <!-- <title>2dgirlfriend | Home</title> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A list of Ant's 2d waifus">
@@ -13,7 +13,7 @@
 
 <body>
   <div id=title-box>
-    <h1>2dgirlfriend.xyz</h1>
+    <!-- <h1>2dgirlfriend.xyz</h1> -->
     <p>coming soon, under development</p>
   </div>
 
